# Nyx-lang

./: Cargo.toml  README.md
src/: build.rs  main.rs
src/lang/: constants.rs  environment.rs  expr.rs  interpreter.rs  mod.rs  panic.rs  parser.rs  resolver.rs  stmt.rs  tokenizer.rs  types.rs  utils.rs
src/lang/libraries/: list.rs  math.rs  mod.rs  os.rs  strings.rs  utils.rs
tests/: clazz.nx  const.nx  fc.nx  for.nx  list.nx  math.nx  nyx.nx  os.nx  string.nx  utils.nx  while.nx
